400-linkerd-web-application/web-application/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-application
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
    - hosts:
        - web-application-<YOURNAME>.workshop.metakube.org # <-- please adjust
      secretName: workshop-tls-cert
  rules:
    - host: web-application-<YOURNAME>.workshop.metakube.org # <-- please adjust
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-application
                port:
                  number: 80
